# python_tdd

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py
app/api/: crud.py  summaries.py
docker/app/: Dockerfile
docker/db/: Dockerfile
project/: .pdm-python  .pdm.toml  Dockerfile  entrypoint.sh  pyproject.toml
project/app/: config.py
project/db/: Dockerfile
scripts/: endpoint.sh
tests/: conftest.py  test_ping.py  test_summaries.py
