[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.261",
    "pyright>=1.1.302",
    "pytest>=7.2.2",
]

[project]
name = "python_tdd"
version = "0.0.1"
description = ""
authors = [{ name = "w40141", email = "w.40141@gmail.com" }]
dependencies = [
  "anyio==3.6.2",
  "click==8.1.3",
  "fastapi==0.95.0",
  "h11==0.14.0",
  "idna==3.4",
  "pydantic==1.10.7",
  "sniffio==1.3.0",
  "starlette==0.26.1",
  "typing-extensions==4.5.0",
  "uvicorn==0.21.1",
]
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
